# bioimagexd

./: BatchApplication.py  BioImageXD.py  CREDITS.txt  Configuration.py  Logging.py  Main.py  RunTests.py  build_app.py  bxd_errors.txt  bxdevents.py  bxdexceptions.py  bxdversion.py  linux_readme.txt  optimize.py  readme.txt  readme_linux.txt  readme_osx.txt  scripting.py  selli.sh  template.py
C++/: copy_code.sh  vtkExtTIFFReader.cxx  vtkImageAlphaFilter.cxx  vtkImageAlphaFilter.h  vtkImageAutoThresholdColocalization.cxx  vtkImageAutoThresholdColocalization.h  vtkImageColocalizationFilter.cxx  vtkImageColocalizationFilter.h  vtkImageColocalizationTest.cxx  vtkImageColocalizationTest.h  vtkImageColorMerge.cxx  vtkImageColorMerge.h  vtkImageDiffractionPSF3D.cxx  vtkImageDiffractionPSF3D.h  vtkImageLabelAverage.cxx  vtkImageLabelAverage.h  vtkImageMapToIntensities.cxx  vtkImageMapToIntensities.h  vtkImageMerge.cxx  vtkImageMerge.h  vtkImageScatterPlot.cxx  vtkImageScatterPlot.h  vtkImageSimpleMIP.cxx  vtkImageSimpleMIP.h  vtkImageSolitaryFilter.cxx  vtkImageSolitaryFilter.h  vtkIntensityTransferFunction.cxx  vtkIntensityTransferFunction.h  vtkLSMReader.cxx  vtkLSMReader.h  vtkTIFFReader.cxx  vtkTIFFReader.h  vtkVolumeRayCastRGBCompositeFunction.cxx  vtkVolumeRayCastRGBCompositeFunction.h
Desktop/: starthere.desktop
GUI/: AboutDialog.py  AnnotationToolbar.py  BatchProcessor.py  BugDialog.py  CSVListView.py  CameraView.py  ChannelListBox.py  ChannelTray.py  ColocListView.py  ColocalizationWindow.py  ColorMergingWindow.py  ColorSelectionDialog.py  ColorTransferEditor.py  Dialogs.py  Events.py  ExportDialog.py  FilterBasedTaskPanel.py  FilterEditor.py  GUIBuilder.py  GuiGeneration.py  HelpViewer.py  Histogram.py  ImportDialog.py  InfoWidget.py  IntensityTransferEditor.py  InteractivePanel.py  MainWindow.py  MaskTray.py  MenuManager.py  OGLAnnotations.py  PainterHelpers.py  ProcessingManager.py  RangedSlider.py  RenderingManager.py  ResampleDialog.py  RescaleDialog.py  Scattergram.py  Scatterplot.py  ScriptEditor.py  SettingsWindow.py  (+12 more)
Help/: colocalization.html  tips.txt
Icons/: BioImageXD.icns
LSM/: Color24bit.py  ImageOperations.py  IntensityTransferFunction.py  Interpolation.py  LightRenderingInterface.py  Logging.py  Module.py  RenderingInterface.py  __init__.py
LUT/: Cyan Hot.bxdlut  HiLo.lut  HiLo12bit.bxdlut  ICA.bxdlut  Red_Hot.bxdlut  ether.lut  grey.lut  hsatl2.lut  hsatv1.lut  is_nih.py
Licensing/: ITK-License  Python-License
Modules/: DynamicLoader.py  Module.py  __init__.py
Presets/: Watershed Segmentation.bxp
Scripts/: ColocStats.bxs
Tests/: DataUnitTests.py  IntensityTransferTests.py  ModuleTests.py  __init__.py  export_to_vtk.py  lsm.py  maptocolor.py  test_autocoloc.py  test_big.py  test_coloctest.py  test_itk.py  test_merge.py  test_merge2.py  test_module_merge.py  test_oif.py  test_oif_read.py  test_plot_track.py  test_scaling.py  test_track.py  unittest_coloc.py  unittest_module.py
Visualization/: VisualizationModules.py  Visualizer.py
Visualizer/: Lights.py  ModuleConfiguration.py  VisualizationFrame.py  VisualizationMode.py  VisualizationModules.py  Visualizer.py  VisualizerWindow.py  __init__.py
examples/: FALTENpliage.mpg  Tree.py  buttonimagedemo.py  colofilter.py  colormerge2.py  colormerging.py  creatergbvolume.py  cvskoe.py  dumpvideo.py  funklootademo_0.py  geom.py  getintensity.py  ico.py  kohina.py  kolo2.py  lib.py  luminance.py  makevideo.py  numpykoe.py  numpyrgb.py  polydata_area.py  recode.py  rgbrendering.py  rgbrenderingtexture.py  tempdist.py  tempdist2.py  tk-koe.py  valitsin.py  videoencode.py  vplayer.py  vtk-isosurface.py  vtk-kolokalisaatiodemo_0.py
itkBXD/: CMakeLists.txt
itkBXD/Algorithms/: itkBinaryThinning3DImageFilter.txx  itkDynamicThreshold3DImageFilter.h  itkDynamicThreshold3DImageFilter.txx  itkDynamicThresholdImageFilter.h  itkDynamicThresholdImageFilter.txx  itkN3MRIBiasFieldCorrectionImageFilter.txx
itkBXD/Wrapping/: CMakeLists.txt  itkBinaryThinning3DImageFilter.wrap  itkDynamicThreshold3DImageFilter.wrap  itkN3MRIBiasFieldCorrectionImageFilter.wrap  wrap_itkLabelShapeImageFilter.cmake
lib/: Annotation.py  BatchAnalysis.py  Command.py  FilterBasedModule.py  FilterTypes.py  ImageOperations.py  Interpolation.py  LightRenderingInterface.py  Math.py  Module.py  Particle.py  ParticleReader.py  ParticleTracker.py  ParticleWriter.py  ProcessingFilter.py  RenderingInterface.py  Track.py  __init__.py  messenger.py
mayavi-modules/: CTFEditor.py  Volume.py
scripts/: bxd_finddiffs.py  comet  cov2html.rb  coverage.py  output.yaml  pylintrc  pymports.rb
trunk/: BatchApplication.py  BioImageXD.py  CREDITS.txt  Configuration.py  GUIApplication.py  Logging.py  Makefile  RunTests.py  build_app.py  bxd_errors.txt  bxdexceptions.py  bxdversion.py  optimize.py  readme.txt  readme_osx.txt  scripting.py  (+1 more)
trunk/vtkBXD/: CMakeLists.txt  CMakeOptions.cmake
trunk/vtkBXD/Processing/: CMakeLists.txt  vtkBXDProcessingWin32Header.h  vtkDistanceRepresentationScaled2D.cxx  vtkExtTIFFReader.cxx  vtkExtTIFFReader.h  vtkHandleColorTransferFunction.cxx  vtkHandleColorTransferFunction.h  vtkImageAutoThresholdColocalization.cxx  vtkImageAutoThresholdColocalization.h  vtkImageColocalizationFilter.cxx  vtkImageColocalizationFilter.h  vtkImageColocalizationTest.cxx  vtkImageColocalizationTest.h  vtkImageColorMerge.cxx  vtkImageColorMerge.h  vtkImageDiffractionPSF3D.cxx  vtkImageDiffractionPSF3D.h  vtkImageIterativeDeconvolution3D.cxx  vtkImageLabelAverage.cxx  vtkImageLabelAverage.h  vtkImageLabelCount.cxx  vtkImageLabelDistanceToSurface.cxx  vtkImageLabelDistanceToSurface.h  vtkImageMapToIntensities.cxx  vtkImageMathematicsClamp.h  vtkImageSimpleMIP.cxx  vtkIntensityTransferFunction.cxx  vtkLIFReader.cxx  vtkLIFReader.h  vtkLSMReader.cxx  vtkLSMReader.h  vtkMRCReader.cxx  vtkMRCReader.h  vtkOMETIFFReader.cxx  vtkOMETIFFReader.h  vtkOMETIFFWriter.cxx  vtkOMETIFFWriter.h  vtkTestMemory.h  vtkVolumeRayCastRGBCompositeFunction.h
trunk/vtkBXD/Wrapping/: CMakeLists.txt
trunk/vtkBXD/Wrapping/Python/vtkbxd/: __init__.py  vtkbxd.py
(+957 files in other folders)
