FIND_PACKAGE(WrapITK REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Algorithms)

WRAP_LIBRARY("${PROJECT_NAME}")
  SET(WRAPPER_LIBRARY_DEPENDS VXLNumerics Base)
  SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKStatistics ITKNumerics ITKBasicFilters ITKAlgorithms)
  AUTO_INCLUDE_MODULES()
END_WRAP_LIBRARY()

